08/ingress2/home.yml
---
#Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-deploy
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      name: home
  template:
    metadata: 
      name: home-pod
      labels:
        name: home
    spec: 
      containers:
        - name: home-container
          image: httpd:2.4
          ports:
            - containerPort: 80
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: home-service
  namespace: testns
spec:
  #type: ClusterIP
  #ClusterIP: 10.96.10.10
  selector:
    name: home
  ports:
    - protocol: TCP
      port:  80
      targetPort: 80
